# geneML

./: .gitignore  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
gene_ml/: gene_caller.py  main.py  model_loader.py  outputs.py  utils.py
geneml/: gene_caller.py  main.py  outputs.py  utils.py
src/geneml/: __init__.py  args.py  gene_caller.py  logger.py  main.py  model_loader.py  outputs.py  parallelism.py  params.py  produce_genes.py  splicing.py  types.py  utils.py
src/geneml/models/: geneML_default.keras
src/geneml/tests/: test_masking.py
trainer/: build_annotation_tsv_from_gff.py  create_datafile.py  create_datafile.sh  create_dataset.py  extract_and_validate_cds.py  grab_sequence.sh  model.py  submit_job.sh  train_model.py  utils.py
